--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -26,6 +26,10 @@ jobs:
 
     timeout-minutes: 1440  # Increased job runtime since ML is slow
     steps:
+      # HOTFIX: https://github.com/actions/checkout/issues/760
+      - name: Trust My Directory
+        run: export GIT_CEILING_DIRECTORIES=/__w
+        
       - uses: actions/checkout@v2
 
       - name: Branch name
